--- a/sample-app/src/main/AndroidManifest.xml
+++ b/sample-app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name="com.splunk.android.sample.SampleApplication"
         android:theme="@style/Theme.SplunkRUMSampleApp">
         <activity
             android:name=".MainActivity"
