--- a/splunk-otel-android/build.gradle
+++ b/splunk-otel-android/build.gradle
@@ -40,4 +40,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation platform("io.opentelemetry:opentelemetry-bom:1.2.0")
+    implementation('io.opentelemetry:opentelemetry-sdk')
+
 }
