Track application startup time and report to the Splunk RUM ingest (#13)
* Track first Activity lifecycle for App Startup

* Hook up to the SampleApplication and fix issues found.

* add a build step to create an empty local.properties

* try adding a switch to the build

* try another option for populating local.properties

* small simplification from PR review

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -15,4 +15,4 @@ jobs:
           java-version: 11
 
       - name: Build and test
-        run: ./gradlew build --no-daemon
+        run: echo rum.beacon.url=http://backend > ./local.properties; echo rum.auth.token=abc123 >> ./local.properties; ./gradlew build --no-daemon
