--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'com.android.application'
 }
 
+def localProperties = new Properties()
+localProperties.load(new FileInputStream(rootProject.file("local.properties")))
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -17,7 +20,15 @@ android {
     }
 
     buildTypes {
+        debug {
+            resValue("string", "rum_beacon_url", localProperties['rum.beacon.url'])
+            resValue("string", "rum_auth_token", localProperties['rum.auth.token'])
+        }
+
         release {
+            //TODO: is there a better way to put values in for these so the build doesn't fail?
+            resValue("string", "rum_beacon_url", "http://backend")
+            resValue("string", "rum_auth_token", "dummyAuthToken")
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
