--- a/splunk-otel-android/build.gradle
+++ b/splunk-otel-android/build.gradle
@@ -37,11 +37,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
 
+    implementation platform("io.opentelemetry:opentelemetry-bom:1.2.0")
+    implementation 'io.opentelemetry:opentelemetry-sdk'
+    implementation 'io.opentelemetry:opentelemetry-exporter-zipkin'
+
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.10.0'
+    testImplementation 'io.opentelemetry:opentelemetry-sdk-testing'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    implementation platform("io.opentelemetry:opentelemetry-bom:1.2.0")
-    implementation('io.opentelemetry:opentelemetry-sdk')
-
 }
