--- a/splunk-otel-android/build.gradle
+++ b/splunk-otel-android/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
+    id "com.vanniktech.maven.publish"
 }
 
 android {
@@ -35,7 +37,6 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
 
     implementation platform("io.opentelemetry:opentelemetry-bom:1.2.0")
     implementation 'io.opentelemetry:opentelemetry-sdk'
