Implement a RUM OkHttp3 Interceptor (#24)
* Implementation of a RUM okhttp interceptor

* update the sample app to properly use live data to update the UI

* extract a couple of test variables, for clarity.

--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -18,6 +18,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    buildFeatures {
+        dataBinding true
+    }
 
     buildTypes {
         debug {
