--- a/splunk-otel-android/build.gradle
+++ b/splunk-otel-android/build.gradle
@@ -41,6 +41,7 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
 
     implementation platform("io.opentelemetry:opentelemetry-bom:1.2.0")
     implementation 'io.opentelemetry:opentelemetry-sdk'
