--- a/splunk-otel-android/build.gradle
+++ b/splunk-otel-android/build.gradle
@@ -29,6 +29,8 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
+
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -39,6 +41,7 @@ android {
 }
 
 dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
