Update the maven group and document how to add the library as a dependency (#50)
* Update the maven group and document how to add the library as a dependency.

* Add link, fix typo

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 
 version=0.1.0-SNAPSHOT
-group=com.splunk.android
+group=com.splunk
