Get publishing working from gitlab (#56)
* Test out the publishing pipeline with a very low version number.

* add a --info for more info

* add another task to get some more info.

* remove the possibly redundant plugin

* let's try it at debug

* try adding the vannitech plugin to the main build

* try adding the signing plugin to the main build

* explicitly write up the signing config

* use standard gradle props

* a little bit of everything

* a little bit of everything, and some more

* simplify the ci build a bit

* collapse all the build commands

* why isn't it publishing?

* add some debugging info

* too much info for gitlab

* actually point the build at a repository

* how about them creds

* pom pom pom!

* rev back to 0.1.0 now that things are working

* cleanup from PR review

--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,7 @@ allprojects {
         google()
         mavenCentral()
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    if (findProperty("release") != "true") {
+        project.version += "-SNAPSHOT"
+    }
 }
