--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,11 +30,15 @@ build:
   only:
     - main
   script:
-    - echo username is $SONATYPE_USERNAME; touch local.properties; ./gradlew build publish -PmavenCentralUsername=$SONATYPE_USERNAME -PmavenCentralPassword=$SONATYPE_PASSWORD
+    - touch local.properties
+    - ./gradlew build publish -PmavenCentralUsername=$SONATYPE_USERNAME -PmavenCentralPassword=$SONATYPE_PASSWORD
 
 release:
   stage: release
   rules:
     - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]+.*/'
   script:
-    - echo "TODO how to deploy this?"
+    - touch local.properties
+    - export ORG_GRADLE_PROJECT_signingKey=$GPG_SECRET_KEY
+    - export ORG_GRADLE_PROJECT_signingPassword=$GPG_PASSWORD
+    - ./gradlew -Prelease=true --no-build-cache -PmavenCentralUsername=$SONATYPE_USERNAME -PmavenCentralPassword=$SONATYPE_PASSWORD build signMavenPublication publish
