--- a/splunk-otel-android/build.gradle
+++ b/splunk-otel-android/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.library'
-    id 'maven-publish'
-    id "com.vanniktech.maven.publish"
+    id "maven-publish"
+    id "signing"
 }
 
 android {
@@ -63,4 +63,72 @@ dependencies {
     testImplementation 'androidx.test:core:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+}
+
+publishing {
+    repositories {
+        maven {
+            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshot"
+            url = project.findProperty('release') == "true" ? releasesRepoUrl : snapshotsRepoUrl
+            credentials {
+                username findProperty("mavenCentralUsername")
+                password findProperty("mavenCentralPassword")
+            }
+        }
+    }
+    publications {
+        maven(MavenPublication) {
+            groupId = "com.splunk"
+            artifactId = "splunk-otel-android"
+
+            pom {
+                name = "Splunk Otel Android"
+                description = "A library for instrumenting Android applications for Splunk RUM"
+                url = "https://github.com/signalfx/splunk-otel-android"
+                licenses {
+                    license {
+                        name = "The Apache License, Version 2.0"
+                        url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
+                    }
+                }
+                developers {
+                    developer {
+                        id = "splunk"
+                        name = "Splunk Instrumentation Authors"
+                        email = "support+sonatype@signalfx.com"
+                        organization = "Splunk"
+                        organizationUrl = "https://www.splunk.com"
+                    }
+                }
+                scm {
+                    connection = "https://github.com/signalfx/splunk-otel-android.git"
+                    developerConnection = "https://github.com/signalfx/splunk-otel-android.git"
+                    url = "https://github.com/signalfx/splunk-otel-android"
+                }
+            }
+        }
+    }
+}
+
+project.afterEvaluate {
+    def component = project.components.findByName("release")
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                from component
+            }
+        }
+    }
+}
+
+signing {
+    required { project.findProperty("release") == "true" }
+    useGpgCmd()
+    def signingKey = findProperty("signingKey")
+    def signingPassword = findProperty("signingPassword")
+    useInMemoryPgpKeys(signingKey, signingPassword)
+    sign publishing.publications["maven"]
 }
