--- a/splunk-otel-android/build.gradle
+++ b/splunk-otel-android/build.gradle
@@ -45,15 +45,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
 
-    implementation platform("io.opentelemetry:opentelemetry-bom:1.3.0")
+    api platform("io.opentelemetry:opentelemetry-bom:1.3.0")
     implementation 'io.opentelemetry:opentelemetry-sdk'
     implementation 'io.opentelemetry:opentelemetry-exporter-zipkin'
     implementation 'io.opentelemetry:opentelemetry-exporter-logging'
 
     implementation platform("io.opentelemetry:opentelemetry-bom-alpha:1.3.0-alpha")
     implementation 'io.opentelemetry:opentelemetry-semconv'
+    implementation 'io.opentelemetry.instrumentation:opentelemetry-okhttp-3.0:1.3.1-alpha'
 
-    api 'io.opentelemetry.instrumentation:opentelemetry-okhttp-3.0:1.3.1-alpha'
+    api 'io.opentelemetry:opentelemetry-api'
     api 'com.squareup.okhttp3:okhttp:4.9.1'
 
     testImplementation 'junit:junit:4.13.2'
@@ -61,10 +62,13 @@ dependencies {
     testImplementation 'io.opentelemetry:opentelemetry-sdk-testing'
     testImplementation 'org.robolectric:robolectric:4.5.1'
     testImplementation 'androidx.test:core:1.3.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    archiveClassifier.set("source")
 }
 
 publishing {
@@ -114,11 +118,34 @@ publishing {
 }
 
 project.afterEvaluate {
+    //note: we need to declare this here in afterEvaluate because the android plugin doesn't
+    // resolve dependencies early enough to make the libraryVariants hack work until here.
+    task javadoc(type: Javadoc) {
+        source = android.sourceSets.main.java.srcDirs
+        classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+
+        configurations.all {
+            if (it.canBeResolved) {
+                logger.info("" + it)
+            }
+        }
+        //grab the library variants, because apparently this is where the real classpath lives that
+        // is needed for javadoc generation.
+        def firstVariant = project.android.libraryVariants.toList().first()
+        classpath += firstVariant.javaCompile.classpath
+        classpath += firstVariant.javaCompile.outputs.files
+    }
+    task javadocJar(type: Jar, dependsOn: javadoc) {
+        archiveClassifier.set('javadoc')
+        from javadoc.destinationDir
+    }
     def component = project.components.findByName("release")
     publishing {
         publications {
             maven(MavenPublication) {
                 from component
+                artifact tasks.sourcesJar
+                artifact tasks.javadocJar
             }
         }
     }
