Build cleanup & correcting the sources jar classifier (#65)

--- a/splunk-otel-android/build.gradle
+++ b/splunk-otel-android/build.gradle
@@ -68,7 +68,7 @@ dependencies {
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
-    archiveClassifier.set("source")
+    archiveClassifier.set("sources")
 }
 
 publishing {
