--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.webkit:webkit:1.4.0'
+    implementation "androidx.browser:browser:1.3.0"
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
