--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,25 +11,35 @@ variables:
   ANDROID_BUILD_TOOLS: "30.0.3"
   ANDROID_COMMAND_LINE_TOOLS: "7302050"
 
-before_script:
-  - apt-get --quiet update --yes
-  - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
-  - wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/commandlinetools-linux-${ANDROID_COMMAND_LINE_TOOLS}_latest.zip
-  - unzip -d android-sdk-linux android-sdk.zip
-  - echo y | android-sdk-linux/cmdline-tools/bin/sdkmanager --sdk_root=. "platforms;android-${ANDROID_COMPILE_SDK}" >/dev/null
-  - echo y | android-sdk-linux/cmdline-tools/bin/sdkmanager --sdk_root=. "platform-tools" >/dev/null
-  - echo y | android-sdk-linux/cmdline-tools/bin/sdkmanager --sdk_root=. "build-tools;${ANDROID_BUILD_TOOLS}" >/dev/null
-  - export ANDROID_SDK_ROOT=$PWD
-  - export PATH=$PATH:$PWD/platform-tools/
-  # temporarily disable checking for EPIPE error and use yes to accept all licenses
-  - set +o pipefail
-  - yes | android-sdk-linux/cmdline-tools/bin/sdkmanager --sdk_root=. --licenses
-  - set -o pipefail
+.prepare-android-environment:
+  before_script:
+    - apt-get --quiet update --yes
+    - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
+    - wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/commandlinetools-linux-${ANDROID_COMMAND_LINE_TOOLS}_latest.zip
+    - unzip -d android-sdk-linux android-sdk.zip
+    - echo y | android-sdk-linux/cmdline-tools/bin/sdkmanager --sdk_root=. "platforms;android-${ANDROID_COMPILE_SDK}" >/dev/null
+    - echo y | android-sdk-linux/cmdline-tools/bin/sdkmanager --sdk_root=. "platform-tools" >/dev/null
+    - echo y | android-sdk-linux/cmdline-tools/bin/sdkmanager --sdk_root=. "build-tools;${ANDROID_BUILD_TOOLS}" >/dev/null
+    - export ANDROID_SDK_ROOT=$PWD
+    - export PATH=$PATH:$PWD/platform-tools/
+    # temporarily disable checking for EPIPE error and use yes to accept all licenses
+    - set +o pipefail
+    - yes | android-sdk-linux/cmdline-tools/bin/sdkmanager --sdk_root=. --licenses
+    - set -o pipefail
 
 stages:
   - build
   - verify
   - release
+
+build:
+  stage: build
+  rules:
+    - if: '$CI_COMMIT_REF_NAME == "main"'
+  extends: .prepare-android-environment
+  script:
+    - touch local.properties
+    - ./gradlew build publish -PmavenCentralUsername=$SONATYPE_USERNAME -PmavenCentralPassword=$SONATYPE_PASSWORD
 
 sast-scan:
   stage: verify
@@ -41,18 +51,11 @@ sast-scan:
     # Fail build on high severity security vulnerabilities
     alert_mode: "policy"
 
-build:
-  stage: build
-  only:
-    - main
-  script:
-    - touch local.properties
-    - ./gradlew build publish -PmavenCentralUsername=$SONATYPE_USERNAME -PmavenCentralPassword=$SONATYPE_PASSWORD
-
 release:
   stage: release
   rules:
     - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]+.*/'
+  extends: .prepare-android-environment
   script:
     - touch local.properties
     - export ORG_GRADLE_PROJECT_signingKey=$GPG_SECRET_KEY
