Fix a javadoc error and add javadoc generation to the PR build (#133)

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -15,4 +15,4 @@ jobs:
           java-version: 11
 
       - name: Build and test
-        run: touch ./local.properties; ./gradlew build --no-daemon
+        run: touch ./local.properties; ./gradlew build javadoc --no-daemon
