add a CI build for merges to main (#156)
* add a CI build for merges to main

* add a build badge for the CI build

* a few tweaks from PR review

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,10 @@
-name: PR build
+name: "Continuous Build"
 
 on:
-  pull_request:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
