--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -26,7 +26,7 @@ android {
         all {
             resValue("string", "rum_realm", localProperties['rum.realm'] ?: "us0")
             resValue("string", "rum_access_token", localProperties['rum.access.token'] ?: "dummyAuth")
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
