--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,7 +8,7 @@ CODEOWNERS @signalfx/gdi-java-maintainers
 #
 #####################################################
 
-*.md    @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/docs
-*.rst   @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/docs
-docs/   @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/docs
-README* @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/docs @signalfx/gdi-specification-approvers @signalfx/gdi-specification-maintainers
+*.md    @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-docs
+*.rst   @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-docs
+docs/   @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-docs
+README* @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-docs @signalfx/gdi-specification-approvers @signalfx/gdi-specification-maintainers
