--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,6 +6,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: ci
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-20.04
