Add lychee link checker (#331)
* add lychee link checker

* add .lycheeignore

* ignore https://appassets.androidplatform.net/assets/index.html and fix readme link

* more urls to ignore

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -20,3 +20,11 @@ jobs:
 
       - name: Build and test
         run: touch ./local.properties; ./gradlew build javadoc --no-daemon
+  check_links:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Link Checker
+        uses: lycheeverse/lychee-action@v1.5.1
+        with:
+          fail: true
