--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,8 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 
+# generate the BuildConfig class that contains the app version
+android.defaults.buildfeatures.buildconfig=true
+
 version=1.1.0
 group=com.splunk
