--- a/renovate.json5
+++ b/renovate.json5
@@ -8,7 +8,7 @@
       // navigation-fragment 2.7.0 and above require android api 34+, which we are not ready for
       // yet due to android gradle plugin only supporting min 33.
       "matchPackagePrefixes": ["androidx.navigation"],
-      "matchCurrentVersion": "2.6.0",
+      "matchUpdateTypes": ["major", "minor"],
       "enabled": false
     },
     {
