--- a/renovate.json5
+++ b/renovate.json5
@@ -15,7 +15,7 @@
       // navigation-fragment 2.7.0 and above require android api 34+, which we are not ready for
       // yet due to android gradle plugin only supporting min 33.
       "matchPackageNames": ["androidx.browser:browser"],
-      "matchCurrentVersion": "1.5.0",
+      "matchUpdateTypes": ["major", "minor"],
       "enabled": false
     }
   ]
