--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
 
   workflow-notification:
     needs:
-      - analyze
+      - build
     if: always()
     uses: ./.github/workflows/reusable-workflow-notification.yml
     with:
