only notify on failure

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
   workflow-notification:
     needs:
       - build
-    if: always()
+    if: failure() && github.run_attempt == 1
     uses: ./.github/workflows/reusable-workflow-notification.yml
     with:
       success: ${{ needs.build.result == 'success' }}
