--- a/.github/workflows/codeql-daily.yml
+++ b/.github/workflows/codeql-daily.yml
@@ -39,5 +39,7 @@ jobs:
     # open an issue on failure because it can be easy to miss CI failure notifications
     needs:
       - analyze
-    if: failure() && github.run_attempt == 1
+    if: always()
     uses: ./.github/workflows/reusable-open-issue-on-failure.yml
+    with:
+      success: ${{ needs.analyze.result == 'success' }}
