--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ android.useAndroidX=true
 
 # generate the BuildConfig class that contains the app version
 android.defaults.buildfeatures.buildconfig=true
+android.minSdk=21
 
 version=0.1.0
 group=io.opentelemetry.android
