Moving otel sdk version to properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ android.useAndroidX=true
 # generate the BuildConfig class that contains the app version
 android.defaults.buildfeatures.buildconfig=true
 android.minSdk=21
+otel.sdk.version=1.28.0
 
 version=0.1.0
 group=io.opentelemetry.android
