--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ android.useAndroidX=true
 android.defaults.buildfeatures.buildconfig=true
 android.minSdk=21
 otel.sdk.version=1.29.0
+bytebuddy.version=1.14.8-SNAPSHOT
 
 version=0.1.0
 group=io.opentelemetry.android
