Moving android compileSdk to global properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ android.useAndroidX=true
 # generate the BuildConfig class that contains the app version
 android.defaults.buildfeatures.buildconfig=true
 android.minSdk=21
+android.compileSdk=34
 otel.sdk.version=1.29.0
 bytebuddy.version=1.14.8
 
