--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,9 @@
 [versions]
-opentelemetry = "1.30.1-alpha"
+opentelemetry = "1.29.0-alpha"
 mockito = "5.5.0"
 junit = "5.10.0"
+byteBuddy = "1.14.8"
+okhttp = "4.11.0"
 
 [libraries]
 opentelemetry-platform = { module = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha", version.ref = "opentelemetry" }
@@ -9,8 +11,12 @@ androidx-appcompat = "androidx.appcompat:appcompat:1.6.1"
 androidx-navigation-fragment = "androidx.navigation:navigation-fragment:2.7.4"
 androidx-core = "androidx.core:core:1.12.0"
 findbugs-jsr305 = "com.google.code.findbugs:jsr305:3.0.2"
+byteBuddy = { module = "net.bytebuddy:byte-buddy", version.ref = "byteBuddy" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+opentelemetry-instrumentation-apiSemconv = { module = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-api-semconv", version.ref = "opentelemetry" }
+opentelemetry-instrumentation-okhttp = { module = "io.opentelemetry.instrumentation:opentelemetry-okhttp-3.0", version.ref = "opentelemetry" }
 
-#Testing
+#Test tools
 opentelemetry-sdk-testing = { module = "io.opentelemetry:opentelemetry-sdk-testing", version.ref = "opentelemetry" }
 androidx-test-core = "androidx.test:core:1.5.0"
 androidx-test-runner = "androidx.test:runner:1.5.2"
@@ -22,8 +28,9 @@ junit-vintage-engine = { module = "org.junit.vintage:junit-vintage-engine", vers
 robolectric = "org.robolectric:robolectric:4.10.3"
 assertj-core = "org.assertj:assertj-core:3.24.2"
 awaitility = "org.awaitility:awaitility:4.2.0"
+okhttp-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
 
-#Compilation
+#Compilation tools
 desugarJdkLibs = "com.android.tools:desugar_jdk_libs:2.0.3"
 nullaway = "com.uber.nullaway:nullaway:0.10.14"
 errorprone-core = "com.google.errorprone:error_prone_core:2.22.0"
@@ -33,9 +40,11 @@ errorprone-plugin = "net.ltgt.gradle:gradle-errorprone-plugin:3.1.0"
 nullaway-plugin = "net.ltgt.gradle:gradle-nullaway-plugin:1.6.0"
 animalsniffer-plugin = "ru.vyarus:gradle-animalsniffer-plugin:1.7.1"
 androd-plugin = "com.android.tools.build:gradle:8.1.2"
+byteBuddy-plugin = { module = "net.bytebuddy:byte-buddy-gradle-plugin", version.ref = "byteBuddy" }
 
 [bundles]
 mockito = ["mockito-core", "mockito-junit-jupiter"]
 junit = ["junit-jupiter-api", "junit-jupiter-engine", "junit-vintage-engine"]
 
 [plugins]
+publishPlugin = { id = "io.github.gradle-nexus.publish-plugin", version = "1.3.0" }
