--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ mockito = "5.5.0"
 junit = "5.10.0"
 byteBuddy = "1.14.8"
 okhttp = "4.11.0"
+spotless = "6.22.0"
 
 [libraries]
 opentelemetry-platform = { module = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha", version.ref = "opentelemetry" }
@@ -35,7 +36,7 @@ desugarJdkLibs = "com.android.tools:desugar_jdk_libs:2.0.3"
 nullaway = "com.uber.nullaway:nullaway:0.10.14"
 errorprone-core = "com.google.errorprone:error_prone_core:2.22.0"
 errorprone-javac = "com.google.errorprone:javac:9+181-r4173-1"
-spotless-plugin = "com.diffplug.spotless:spotless-plugin-gradle:6.22.0"
+spotless-plugin = { module = "com.diffplug.spotless:spotless-plugin-gradle", version.ref = "spotless" }
 errorprone-plugin = "net.ltgt.gradle:gradle-errorprone-plugin:3.1.0"
 nullaway-plugin = "net.ltgt.gradle:gradle-nullaway-plugin:1.6.0"
 animalsniffer-plugin = "ru.vyarus:gradle-animalsniffer-plugin:1.7.1"
@@ -48,3 +49,4 @@ junit = ["junit-jupiter-api", "junit-jupiter-engine", "junit-vintage-engine"]
 
 [plugins]
 publishPlugin = { id = "io.github.gradle-nexus.publish-plugin", version = "1.3.0" }
+spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
