Adding disk buffering, part 3 (#194)
* Created PeriodicWorkService

* Adding tests

* Changing loop delays

* Enhancing tests

* Created PeriodicRunnable and time tool

* Updating javadoc

* Adding javadoc

* Updating javadoc

* Moving Disk buffering config to its feature dir

* Created the DiskExportScheduleHandler

* Renaming DiskExportScheduleHandler

* Using Mockk and created default export scheduler

* Using ConcurrentLinkedQueue for periodic work service

* Adding ExportScheduleHandler.disable a default impl

* Moved DefaultSystemTime to SystemTime.kt

* Moving DefaultExportScheduler instance to DefaultExportScheduleHandler's constructor

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,7 @@ androidx-test-core = "androidx.test:core:1.5.0"
 androidx-test-runner = "androidx.test:runner:1.5.2"
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 mockito-junit-jupiter = { module = "org.mockito:mockito-junit-jupiter", version.ref = "mockito" }
+mockk = "io.mockk:mockk:1.13.7"
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
 junit-vintage-engine = { module = "org.junit.vintage:junit-vintage-engine", version.ref = "junit" }
@@ -59,7 +60,7 @@ byteBuddy-plugin = { module = "net.bytebuddy:byte-buddy-gradle-plugin", version.
 kotlin-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 
 [bundles]
-mockito = ["mockito-core", "mockito-junit-jupiter"]
+mocking = ["mockito-core", "mockito-junit-jupiter", "mockk"]
 junit = ["junit-jupiter-api", "junit-jupiter-engine", "junit-vintage-engine"]
 
 [plugins]
