--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
+      android:name="com.example.hello_otel.DemoApp"
     android:theme="@style/Theme.Hello_otel"
     tools:targetApi="31">
     <activity
-      android:name=".MainActivity"
+      android:name="com.example.hello_otel.MainActivity"
       android:exported="true"
       android:theme="@style/Theme.Hello_otel">
       <intent-filter>
