Add more code snippet of open telemetry

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 adapterRxjava2Version = "2.9.0"
 autodisposeVersion = "1.4.1"
 converterGsonVersion = "2.9.0"
+chuckLibraryVersion = "4.0.0"
 opentelemetry = "1.36.0"
 opentelemetry-alpha = "2.1.0-alpha"
 opentelemetry-semconv = "1.23.1-alpha"
@@ -30,6 +31,8 @@ autodispose = { module = "com.uber.autodispose:autodispose", version.ref = "auto
 autodispose-android = { module = "com.uber.autodispose:autodispose-android", version.ref = "autodisposeVersion" }
 autodispose-android-archcomponents = { module = "com.uber.autodispose:autodispose-android-archcomponents", version.ref = "autodisposeVersion" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGsonVersion" }
+chuck-library = { module = "com.github.chuckerteam.chucker:library", version.ref = "chuckLibraryVersion" }
+chuck-library-no-op = { module = "com.github.chuckerteam.chucker:library-no-op", version.ref = "chuckLibraryVersion" }
 opentelemetry-extension-trace-propagators = { module = "io.opentelemetry:opentelemetry-extension-trace-propagators", version.ref = "opentelemetryExtensionTracePropagatorsVersion" }
 opentelemetry-platform = { module = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha", version.ref = "opentelemetry-alpha" }
 androidx-appcompat = "androidx.appcompat:appcompat:1.6.1"
