Refine the actionable button.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
       android:name="com.example.hello_otel.DemoApp"
-    android:theme="@style/Theme.Hello_otel"
+    android:theme="@style/Theme.HelloOtel"
     tools:targetApi="31">
     <activity
       android:name="com.example.hello_otel.MainActivity"
       android:exported="true"
-      android:theme="@style/Theme.Hello_otel">
+      android:theme="@style/Theme.HelloOtel">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
