--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,5 @@ android.minSdk=21
 android.targetSdk=23
 android.compileSdk=34
 
-version=0.6.0-SNAPSHOT
+version=0.6.0
 group=io.opentelemetry.android
